fixed alignment

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
 }
 
 .main {
+  justify-content: center;
   display: flex;
   margin-bottom: 20px;
   text-align: center;
